--- a/chat.html
+++ b/chat.html
@@ -141,7 +141,6 @@ footer {
   <div id="chatContainer">
     <div id="chatHeader">
       <h2 id="chatTitle">💬 Bate-papo Geral</h2>
-      <div id="headerControls"></div>
     </div>
     <div id="chatWindow"></div>
     <div id="chatInput">
@@ -186,12 +185,12 @@ const msgSound = document.getElementById('msgSound');
 
 let currentUser = null;
 let currentChat = 'chatGlobal';
-let currentPartner = null;
-let activeListenerRef = null;
+let activeListener = null;
 
-/* === AUTENTICAÇÃO === */
+/* === LOGIN === */
 loginBtn.onclick = () => auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick = () => auth.signOut();
+generalBtn.onclick = openGlobal;
 
 auth.onAuthStateChanged(user => {
   if (user) {
@@ -203,26 +202,21 @@ auth.onAuthStateChanged(user => {
     sendBtn.disabled = false;
 
     db.ref('users/' + user.uid).set({ name: user.displayName, photo: user.photoURL });
-    db.ref('online/' + user.uid).set({ name: user.displayName, photo: user.photoURL });
+    db.ref('online/' + user.uid).set({ name: user.displayName });
     db.ref('online/' + user.uid).onDisconnect().remove();
 
     renderUsers();
     openGlobal();
-    watchPrivateMessages(); // 🔔 Ativa detecção de mensagens privadas
+    watchPrivateMessages();
   } else {
     currentUser = null;
-    loginBtn.style.display = 'inline-block';
-    logoutBtn.style.display = 'none';
-    generalBtn.style.display = 'none';
     msgInput.disabled = true;
     sendBtn.disabled = true;
     chatWindow.innerHTML = '';
-    userList.innerHTML = '';
-    onlineCount.textContent = '👥 Usuários online: 0';
   }
 });
 
-/* === LISTAR USUÁRIOS === */
+/* === LISTA DE USUÁRIOS === */
 function renderUsers(){
   db.ref('users').on('value', snap => {
     const all = snap.val() || {};
@@ -230,119 +224,105 @@ function renderUsers(){
       const online = onlineSnap.val() || {};
       userList.innerHTML = '';
       let count = 0;
-      for (const uid in all) {
-        if (currentUser && uid === currentUser.uid) continue;
+      for (const uid in all){
+        if (uid === currentUser?.uid) continue;
         const u = all[uid];
         const onlineNow = !!online[uid];
         if (onlineNow) count++;
-        const div = document.createElement('div');
-        div.className = 'userItem';
-        div.dataset.uid = uid;
-        div.innerHTML = `<img src="${u.photo || 'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${onlineNow ? '🟢' : '⚪'} ${u.name}</span>`;
-        div.onclick = () => openPrivate(uid, u.name);
-        userList.appendChild(div);
+        const d = document.createElement('div');
+        d.className = 'userItem';
+        d.innerHTML = `<img src="${u.photo}"><span>${onlineNow?'🟢':'⚪'} ${u.name}</span>`;
+        d.onclick = () => openPrivate(uid, u.name);
+        userList.appendChild(d);
       }
       onlineCount.textContent = `👥 Usuários online: ${count}`;
     });
   });
 }
 
-/* === ABRIR GLOBAL === */
+/* === CHAT GERAL === */
 function openGlobal(){
-  detachListener();
+  detach();
   currentChat = 'chatGlobal';
   chatTitle.textContent = '💬 Bate-papo Geral';
   chatWindow.innerHTML = '';
   const ref = db.ref('chatGlobal').limitToLast(200);
-  activeListenerRef = ref;
-  ref.on('child_added', snap => renderMessage(snap.key, snap.val()));
+  activeListener = ref;
+  ref.on('child_added', s => renderMessage(s.key, s.val()));
 }
 
-/* === ABRIR PRIVADO === */
+/* === CHAT PRIVADO === */
 function openPrivate(uid, name){
-  if (!currentUser) return;
-  detachListener();
-  currentPartner = uid;
-  const pair = [currentUser.uid, uid].sort().join('_');
-  currentChat = 'private/' + pair;
+  detach();
+  const path = ['private', [currentUser.uid, uid].sort().join('_')].join('/');
+  currentChat = path;
   chatTitle.textContent = '👤 ' + name;
   chatWindow.innerHTML = '';
-  const ref = db.ref('private/' + pair).limitToLast(200);
-  activeListenerRef = ref;
-  ref.on('child_added', snap => renderMessage(snap.key, snap.val()));
-  removeNotification(uid); // 🔕 apaga notificação ao abrir
+  const ref = db.ref(path).limitToLast(200);
+  activeListener = ref;
+  ref.on('child_added', s => renderMessage(s.key, s.val()));
+  removeNotification(uid);
 }
 
-/* === DESCONECTA OUVINTE === */
-function detachListener(){
-  if (activeListenerRef) activeListenerRef.off();
+/* === DESCONECTAR OUVINTE === */
+function detach(){
+  if (activeListener) activeListener.off();
 }
 
-/* === ENVIAR MENSAGEM === */
-sendBtn.onclick = sendMessage;
-msgInput.addEventListener('keypress', e => { if (e.key === 'Enter') sendMessage(); });
-function sendMessage(){
-  if (!currentUser) return;
-  const text = msgInput.value.trim();
-  if (!text) return;
-  db.ref(currentChat).push({
-    uid: currentUser.uid,
-    user: currentUser.displayName,
-    text,
-    timestamp: Date.now()
-  });
-  msgInput.value = '';
+/* === ENVIAR === */
+sendBtn.onclick = sendMsg;
+msgInput.addEventListener('keypress', e=>{if(e.key==='Enter')sendMsg();});
+function sendMsg(){
+  const txt = msgInput.value.trim();
+  if(!txt || !currentUser) return;
+  db.ref(currentChat).push({uid:currentUser.uid,user:currentUser.displayName,text:txt,timestamp:Date.now()});
+  msgInput.value='';
 }
 
-/* === RENDER === */
-function renderMessage(key, m){
-  const div = document.createElement('div');
-  div.className = m.uid === currentUser?.uid ? 'msg userMsg' : 'msg otherMsg';
-  const time = new Date(m.timestamp).toLocaleTimeString();
-  div.innerHTML = `<strong>${m.user}</strong>: ${m.text}<small>${time}</small>`;
-  if (m.uid === currentUser?.uid) {
-    const del = document.createElement('button');
-    del.className = 'deleteBtn';
-    del.textContent = '🗑';
-    del.onclick = () => db.ref(currentChat + '/' + key).remove();
+/* === RENDER MSG === */
+function renderMessage(key,m){
+  const div=document.createElement('div');
+  div.className=m.uid===currentUser?.uid?'msg userMsg':'msg otherMsg';
+  div.innerHTML=`<strong>${m.user}</strong>: ${m.text}<small>${new Date(m.timestamp).toLocaleTimeString()}</small>`;
+  if(m.uid===currentUser?.uid){
+    const del=document.createElement('button');
+    del.className='deleteBtn';
+    del.textContent='🗑';
+    del.onclick=()=>db.ref(currentChat+'/'+key).remove();
     div.appendChild(del);
   }
   chatWindow.appendChild(div);
-  chatWindow.scrollTop = chatWindow.scrollHeight;
+  chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
 /* === NOTIFICAÇÕES PRIVADAS === */
 function watchPrivateMessages(){
-  db.ref('private').on('child_added', chatSnap => {
-    const chatId = chatSnap.key;
-    if (!chatId.includes(currentUser.uid)) return;
-    db.ref('private/' + chatId).limitToLast(1).on('child_added', snap => {
-      const msg = snap.val();
-      if (msg.uid !== currentUser.uid) {
-        const otherUid = chatId.replace(currentUser.uid, '').replace('_', '');
-        if (currentChat !== 'private/' + chatId) {
-          showNotification(msg.user, msg.text, otherUid);
-          msgSound.currentTime = 0;
-          msgSound.play();
-        }
+  db.ref('private').on('child_added', chat=>{
+    const chatId=chat.key;
+    if(!chatId.includes(currentUser.uid)) return;
+    db.ref('private/'+chatId).limitToLast(1).on('child_added', snap=>{
+      const m=snap.val();
+      if(m.uid!==currentUser.uid && currentChat!=='private/'+chatId){
+        const other=chatId.replace(currentUser.uid,'').replace('_','');
+        showNotification(m.user,m.text,other);
+        msgSound.currentTime=0; msgSound.play();
       }
     });
   });
 }
 
-/* === EXIBIR / REMOVER NOTIF === */
-function showNotification(user, text, uid){
+/* === NOTIFICAÇÃO === */
+function showNotification(user,text,uid){
   removeNotification(uid);
-  const div = document.createElement('div');
-  div.className = 'notification';
-  div.dataset.uid = uid;
-  div.innerHTML = `<b>${user}</b>: ${text}<button onclick="removeNotification('${uid}')">✖</button>`;
-  notificationContainer.appendChild(div);
+  const n=document.createElement('div');
+  n.className='notification';
+  n.dataset.uid=uid;
+  n.innerHTML=`<b>${user}</b>: ${text}<button onclick="removeNotification('${uid}')">✖</button>`;
+  notificationContainer.appendChild(n);
 }
-
 function removeNotification(uid){
-  const n = notificationContainer.querySelector(`[data-uid='${uid}']`);
-  if (n) n.remove();
+  const n=notificationContainer.querySelector(`[data-uid='${uid}']`);
+  if(n)n.remove();
 }
 </script>
 </body>
