--- a/chat.html
+++ b/chat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="ru">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,22 @@
   --color-primary-hover: #45a049;
 }
 * { margin:0; padding:0; box-sizing:border-box; }
-body { font-family:Arial, sans-serif; background:var(--color-bg-light); }
+body { font-family:Arial, sans-serif; background:var(--color-bg-light); transition:background 0.3s, color 0.3s; }
+
+body.dark {
+  background:#121212;
+  color:#eee;
+}
+body.dark header, body.dark footer, body.dark #chatContainer, body.dark #userList, body.dark #adSidebar, body.dark #chatInput {
+  background:#1e1e1e;
+  color:#eee;
+  border-color:#333;
+}
+body.dark #topBar { background:#1a1a1a; border-color:#333; }
+body.dark #chatInput input { background:#333; color:#eee; border:1px solid #555; }
+body.dark #chatInput button { background:#388e3c; }
+body.dark .userMsg { background:#2e7d32; color:white; }
+body.dark .otherMsg { background:#3e3e3e; color:white; }
 
 /* HEADER */
 header {
@@ -30,9 +45,21 @@ header {
   position:fixed;
   top:0; left:0; right:0;
   z-index:10;
+  justify-content:space-between;
 }
 header h1 { color:var(--color-primary); font-size:1.3em; display:flex; align-items:center; gap:6px; }
 .emoji-head { width:28px; }
+
+/* LANGUAGE + THEME BTNS */
+#langThemeBtns { display:flex; gap:8px; align-items:center; }
+#langThemeBtns button {
+  background:white; color:var(--color-primary);
+  border:1px solid var(--color-primary);
+  border-radius:5px; padding:4px 10px; cursor:pointer;
+  font-size:0.9em;
+}
+#langThemeBtns button:hover { background:var(--color-primary); color:white; }
+body.dark #langThemeBtns button { background:#333; color:#a5d6a7; border-color:#4CAF50; }
 
 /* TOPBAR */
 #topBar {
@@ -123,6 +150,10 @@ footer {
 
 <header>
   <h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"></h1>
+  <div id="langThemeBtns">
+    <button id="themeBtn">🌙</button>
+    <button id="langBtn">🇷🇺 Рус</button>
+  </div>
 </header>
 
 <div id="topBar">
@@ -156,7 +187,22 @@ footer {
 <audio id="msgSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2a8c4e8d5a.mp3?filename=message-pop-alert-23584.mp3" preload="auto"></audio>
 
 <script>
-/* === CONFIG FIREBASE === */
+/* === TEMA === */
+const themeBtn=document.getElementById('themeBtn');
+themeBtn.onclick=()=>{
+  document.body.classList.toggle('dark');
+  themeBtn.textContent=document.body.classList.contains('dark')?'☀️':'🌙';
+};
+
+/* === IDIOMA === */
+const langBtn=document.getElementById('langBtn');
+let currentLang='ru';
+langBtn.onclick=()=>{
+  if(currentLang==='ru'){currentLang='pt';langBtn.textContent='🇧🇷 PT';document.documentElement.lang='pt-BR';}
+  else{currentLang='ru';langBtn.textContent='🇷🇺 Рус';document.documentElement.lang='ru';}
+};
+
+/* === FIREBASE CONFIG E CHAT === */
 const firebaseConfig = {
   apiKey: "AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
   authDomain: "dimitry-rusian.firebaseapp.com",
@@ -167,151 +213,107 @@ const firebaseConfig = {
   appId: "1:449029666805:web:feaf575a7b7e6f234a52bc"
 };
 firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.database();
+const auth=firebase.auth(), db=firebase.database();
 
-/* === ELEMENTOS === */
-const loginBtn = document.getElementById('loginBtn');
-const logoutBtn = document.getElementById('logoutBtn');
-const generalBtn = document.getElementById('generalBtn');
-const userList = document.getElementById('userList');
-const msgInput = document.getElementById('msgInput');
-const sendBtn = document.getElementById('sendBtn');
-const chatWindow = document.getElementById('chatWindow');
-const chatTitle = document.getElementById('chatTitle');
-const onlineCount = document.getElementById('onlineCount');
-const notificationContainer = document.getElementById('notificationContainer');
-const msgSound = document.getElementById('msgSound');
+const loginBtn=document.getElementById('loginBtn'), logoutBtn=document.getElementById('logoutBtn'), generalBtn=document.getElementById('generalBtn');
+const userList=document.getElementById('userList'), msgInput=document.getElementById('msgInput'), sendBtn=document.getElementById('sendBtn');
+const chatWindow=document.getElementById('chatWindow'), chatTitle=document.getElementById('chatTitle'), onlineCount=document.getElementById('onlineCount');
+const notificationContainer=document.getElementById('notificationContainer'), msgSound=document.getElementById('msgSound');
+let currentUser=null, currentChat='chatGlobal', activeListener=null;
 
-let currentUser = null;
-let currentChat = 'chatGlobal';
-let activeListener = null;
+loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
+logoutBtn.onclick=()=>auth.signOut();
+generalBtn.onclick=openGlobal;
 
-/* === LOGIN === */
-loginBtn.onclick = () => auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
-logoutBtn.onclick = () => auth.signOut();
-generalBtn.onclick = openGlobal;
-
-auth.onAuthStateChanged(user => {
-  if (user) {
-    currentUser = user;
-    loginBtn.style.display = 'none';
-    logoutBtn.style.display = 'inline-block';
-    generalBtn.style.display = 'inline-block';
-    msgInput.disabled = false;
-    sendBtn.disabled = false;
-
-    db.ref('users/' + user.uid).set({ name: user.displayName, photo: user.photoURL });
-    db.ref('online/' + user.uid).set({ name: user.displayName });
-    db.ref('online/' + user.uid).onDisconnect().remove();
-
-    renderUsers();
-    openGlobal();
-    watchPrivateMessages();
+auth.onAuthStateChanged(user=>{
+  if(user){
+    currentUser=user;
+    loginBtn.style.display='none';logoutBtn.style.display='inline-block';generalBtn.style.display='inline-block';
+    msgInput.disabled=false;sendBtn.disabled=false;
+    db.ref('users/'+user.uid).set({name:user.displayName,photo:user.photoURL});
+    db.ref('online/'+user.uid).set({name:user.displayName});
+    db.ref('online/'+user.uid).onDisconnect().remove();
+    renderUsers();openGlobal();watchPrivateMessages();
   } else {
-    currentUser = null;
-    msgInput.disabled = true;
-    sendBtn.disabled = true;
-    chatWindow.innerHTML = '';
+    currentUser=null;msgInput.disabled=true;sendBtn.disabled=true;chatWindow.innerHTML='';
   }
 });
 
-/* === LISTA DE USUÁRIOS === */
 function renderUsers(){
-  db.ref('users').on('value', snap => {
-    const all = snap.val() || {};
-    db.ref('online').once('value').then(onlineSnap => {
-      const online = onlineSnap.val() || {};
-      userList.innerHTML = '';
-      let count = 0;
-      for (const uid in all){
-        if (uid === currentUser?.uid) continue;
-        const u = all[uid];
-        const onlineNow = !!online[uid];
-        if (onlineNow) count++;
-        const d = document.createElement('div');
-        d.className = 'userItem';
-        d.innerHTML = `<img src="${u.photo}"><span>${onlineNow?'🟢':'⚪'} ${u.name}</span>`;
-        d.onclick = () => openPrivate(uid, u.name);
+  db.ref('users').on('value',snap=>{
+    const all=snap.val()||{};
+    db.ref('online').once('value').then(oSnap=>{
+      const online=oSnap.val()||{};
+      userList.innerHTML='';let count=0;
+      for(const uid in all){
+        if(uid===currentUser?.uid)continue;
+        const u=all[uid];const onlineNow=!!online[uid];if(onlineNow)count++;
+        const d=document.createElement('div');
+        d.className='userItem';
+        d.innerHTML=`<img src="${u.photo}"><span>${onlineNow?'🟢':'⚪'} ${u.name}</span>`;
+        d.onclick=()=>openPrivate(uid,u.name);
         userList.appendChild(d);
       }
-      onlineCount.textContent = `👥 Usuários online: ${count}`;
+      onlineCount.textContent=`👥 Usuários online: ${count}`;
     });
   });
 }
 
-/* === CHAT GERAL === */
 function openGlobal(){
   detach();
-  currentChat = 'chatGlobal';
-  chatTitle.textContent = '💬 Bate-papo Geral';
-  chatWindow.innerHTML = '';
-  const ref = db.ref('chatGlobal').limitToLast(200);
-  activeListener = ref;
-  ref.on('child_added', s => renderMessage(s.key, s.val()));
+  currentChat='chatGlobal';
+  chatTitle.textContent='💬 Bate-papo Geral';
+  chatWindow.innerHTML='';
+  const ref=db.ref('chatGlobal').limitToLast(200);
+  activeListener=ref;
+  ref.on('child_added',s=>renderMessage(s.key,s.val()));
 }
 
-/* === CHAT PRIVADO === */
-function openPrivate(uid, name){
+function openPrivate(uid,name){
   detach();
-  const path = ['private', [currentUser.uid, uid].sort().join('_')].join('/');
-  currentChat = path;
-  chatTitle.textContent = '👤 ' + name;
-  chatWindow.innerHTML = '';
-  const ref = db.ref(path).limitToLast(200);
-  activeListener = ref;
-  ref.on('child_added', s => renderMessage(s.key, s.val()));
+  const path=['private',[currentUser.uid,uid].sort().join('_')].join('/');
+  currentChat=path;chatTitle.textContent='👤 '+name;chatWindow.innerHTML='';
+  const ref=db.ref(path).limitToLast(200);
+  activeListener=ref;
+  ref.on('child_added',s=>renderMessage(s.key,s.val()));
   removeNotification(uid);
 }
 
-/* === DESCONECTAR OUVINTE === */
-function detach(){
-  if (activeListener) activeListener.off();
-}
-
-/* === ENVIAR === */
-sendBtn.onclick = sendMsg;
-msgInput.addEventListener('keypress', e=>{if(e.key==='Enter')sendMsg();});
+function detach(){if(activeListener)activeListener.off();}
+sendBtn.onclick=sendMsg;msgInput.addEventListener('keypress',e=>{if(e.key==='Enter')sendMsg();});
 function sendMsg(){
-  const txt = msgInput.value.trim();
-  if(!txt || !currentUser) return;
+  const txt=msgInput.value.trim();
+  if(!txt||!currentUser)return;
   db.ref(currentChat).push({uid:currentUser.uid,user:currentUser.displayName,text:txt,timestamp:Date.now()});
   msgInput.value='';
 }
-
-/* === RENDER MSG === */
 function renderMessage(key,m){
   const div=document.createElement('div');
   div.className=m.uid===currentUser?.uid?'msg userMsg':'msg otherMsg';
   div.innerHTML=`<strong>${m.user}</strong>: ${m.text}<small>${new Date(m.timestamp).toLocaleTimeString()}</small>`;
   if(m.uid===currentUser?.uid){
     const del=document.createElement('button');
-    del.className='deleteBtn';
-    del.textContent='🗑';
+    del.className='deleteBtn';del.textContent='🗑';
     del.onclick=()=>db.ref(currentChat+'/'+key).remove();
     div.appendChild(del);
   }
-  chatWindow.appendChild(div);
-  chatWindow.scrollTop=chatWindow.scrollHeight;
+  chatWindow.appendChild(div);chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-/* === NOTIFICAÇÕES PRIVADAS === */
 function watchPrivateMessages(){
-  db.ref('private').on('child_added', chat=>{
+  db.ref('private').on('child_added',chat=>{
     const chatId=chat.key;
-    if(!chatId.includes(currentUser.uid)) return;
-    db.ref('private/'+chatId).limitToLast(1).on('child_added', snap=>{
+    if(!chatId.includes(currentUser.uid))return;
+    db.ref('private/'+chatId).limitToLast(1).on('child_added',snap=>{
       const m=snap.val();
       if(m.uid!==currentUser.uid && currentChat!=='private/'+chatId){
         const other=chatId.replace(currentUser.uid,'').replace('_','');
         showNotification(m.user,m.text,other);
-        msgSound.currentTime=0; msgSound.play();
+        msgSound.currentTime=0;msgSound.play();
       }
     });
   });
 }
-
-/* === NOTIFICAÇÃO === */
 function showNotification(user,text,uid){
   removeNotification(uid);
   const n=document.createElement('div');
