Update button for navigation to index.html

--- a/chat.html
+++ b/chat.html
@@ -158,13 +158,14 @@ footer {
 
 <div id="topBar">
   <div class="left">
-    <button id="index.html">🏠 Início</button>
+    <button id="homeBtn" onclick="location.href='index.html'">🏠 Início</button>
     <button id="loginBtn">Login com Google</button>
     <button id="logoutBtn" style="display:none;">Logout</button>
     <button id="generalBtn" style="display:none;">💬 Bate-papo Geral</button>
   </div>
   <span id="onlineCount">👥 Usuários online: 0</span>
 </div>
+
 
 <div id="mainContent">
   <div id="userList"></div>
